--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -14,7 +14,7 @@
 }
 
 header{
-    background-color: #d1d1c6ce;
+    background-color: #ececec;
     margin-left: 0%;
     border-bottom-style: solid;
     border-width: 3px;
@@ -45,6 +45,7 @@ nav ul{
     margin: 0;
     padding: 0;
     list-style: none;
+    
 }
 nav ul img{
     margin-top: 1rem;
@@ -58,6 +59,7 @@ nav li{
     margin-right: 100px;
     padding-top: 25px;
     position: relative;
+    color:#7572c7;
 }
 
 nav a{
@@ -65,11 +67,12 @@ color: rgb(0, 0, 0);
 text-decoration: none;
 text-transform: uppercase;
 font-size: 20px;
+color: #7572c7;
 
 }
 
 nav a:hover{
-    color:rgb(71, 114, 163);
+    color:#7572c7;
     font-weight: bold;
    
 }
@@ -77,7 +80,7 @@ nav a::before{
     content: '';
     display: block;
     height: 3px;
-    background-color: rgb(71, 114, 163);
+    background-color: #7572c7;
 
     position: absolute;
     top: 0; 
@@ -93,7 +96,7 @@ nav a:hover::before {
 
 
 .footer-container{
-background-color: #d1d1c6ce;
+background-color: #fff1ee;
 padding-bottom: 0rem;
 }
 
@@ -101,8 +104,8 @@ padding-bottom: 0rem;
     width: 100%;
     height: 15vh;
     margin-bottom: 0;
-    background-color: #d1d1c6ce;
-    color: rgb(0, 0, 0);
+    background-color: #fff1ee;
+    color: #8c88e9;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -122,12 +125,13 @@ padding-bottom: 0rem;
 }
 
 .footer-heading a {
-color: rgb(0, 0, 0);
+color: #8c88e9;
 text-decoration: none;
 margin-bottom: 0.5rem;
 }
+
 .footer-heading a:hover{
-    color:rgb(28, 83, 146);
+    color:#752bff;
     transition: 0.3s ease-out;
 }
 
@@ -154,16 +158,16 @@ margin-bottom: 0.5rem;
     width: 100px;
     height: 40px;
     border-radius: 4px;
-    background-color: green;
+    background-color:#7572c7;
     outline: none;
     border: none;
-    color: #fff;
+    color: #fff1ee;
     font-size: 1rem;
 }
 
 #footer-email-btn:hover{
     cursor: pointer;
-    background-color: rgb(86, 255, 20);
+    background-color: #7975e7;
     transition: all 0.4s ease-out;
 }
 
@@ -172,50 +176,53 @@ margin-bottom: 0.5rem;
 /* Stylesheet for Index */ 
 
 .first{
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-family:'Josefin Sans', sans-serif;
 font-size: 60px;
 text-align: center;
-color: black;
+color: #7572c7;
 padding-top: 4em;
 text-transform: uppercase;
-background-color: #DFDFD7;
+background-color: #dbdbdb
+;
 }
 
 .second{
 padding: 30%;
-background-image: url(/Style/DropCounts.jpg);
+background-image: url(/Style/DropCounts3.jpg) ;
+
 background-size: 100%;
 
 }
 
 .second h2{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Josefin Sans', sans-serif;
     text-transform: uppercase;
-    font-size: 45px;
+    font-size: 25px;
     text-align: top;
+    color: #7572c7;
 
 }
 
 
 .second a{
-    font-size: 25px;
-    color: black;
+    font-size: 20px;
+    color: #7572c7;
     font-style: normal;
     text-decoration: none;
     text-align:center
 }
 
 .second a:hover{
-    color: black;
-    font-size: 27px;
+    color: #7572c7;
+    font-size: 21px;
     cursor: pointer;
 }
 
 .third {
     background-image: url(/Style/underwater2.png.jpg);
     background-size: 100%;
-    padding: 20%;
-    padding-top: 20%;
+    padding-bottom: 10rem;
+    padding-top: 5rem;
     text-align: center;
 }
 
@@ -260,6 +267,8 @@ margin: auto 10%;
     border: 1px solid;     
     display:inline-block;
     padding: 5px;
+    border-color: white;
+    border-width: 2px;
    
 }
 .imageContainer p {
@@ -277,7 +286,7 @@ margin: auto 10%;
 }
 
 #aboutContainer{
-    color: black;
+    color:#7572c7;
     text-align: center;
     width: 80%;
     height: 300px;
@@ -289,6 +298,7 @@ margin: auto 10%;
         font-size: 40px;
         text-align: left;
         margin-left: 0px;
+        color: #7572c7;
     }
 
 #employeesContainer{
@@ -296,15 +306,16 @@ margin: auto 10%;
     height: 450px;
     font-size: 30px;  
     width:100%;
-    border: 0.5px solid black;
+    border: 5px solid white;
     text-align: center;
+    color: #7572c7;
 }
 
 
 #mainContainer{
-    background-color:#DFDFD7;
-    padding-left: 650px;
-    padding-right: 500px;
+    background-color:#dbdbdb ;
+    padding-left: 5rem;
+    padding-right: 5rem;
     height: 100%;
     padding-bottom: 5%;
 }
@@ -327,6 +338,7 @@ margin: 80px auto;
 margin-left: 0px;
 font-size: 25px;
 text-align: left;
+color: #7572c7;
 }
 .historyContainerList{
     list-style:none;
@@ -336,9 +348,10 @@ text-align: left;
 /* Stylesheet for products */
 
 #productSiteContainer{
-    background-color:#DFDFD7;
-    padding: 50px 200px 20px 200px;
+    background-color:#fff1ee;
+    padding: 15rem 5rem;
     height: 100%;
+    color: #7572c7;
 
 }
 
@@ -348,7 +361,7 @@ text-align: left;
 }
 
 #productContainerText{
-    font-size: 30px;
+    font-size: 20px;
     
 }
 
@@ -361,10 +374,9 @@ text-align: left;
 
 
 .imageProductContainer{
-    height: 500px;
     width: auto;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     text-align: left;
     border-style:none;
     border-width: 1px;
@@ -377,11 +389,12 @@ h5{
 
 .productOrderContainer{
     border-top: black;
-    margin-top: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 4rem;
     width: 8rem;
     border-style: solid;
     border-width: 3px;
-    background-color: rgb(226, 211, 0);
+    background-color:#7572c7;
     border-radius: 1rem;
 }
 
@@ -392,15 +405,16 @@ h5{
 }
 
 .productOrderContainer:hover{
-    background-color:rgb(204, 191, 4);
+    background-color: #8c56f0;
+    ;
     transition: 1s;
 }
 
 .pictureProduct{
-    width: 500px;
+    width: 200px;
     height: auto;
     float: right;
-    margin-right: 1000px;
+    margin-right:20rem;
 }
 
 /* Stylesheet for profileRegister */ 
@@ -408,15 +422,15 @@ h5{
 
 .container {
   padding: 32px;
-  margin: 15rem 50rem 30rem;
-  margin-bottom: 2;
+  margin: 5rem 10rem 0.5rem;
+
 }
 
 
 input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 5px 0 15px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
@@ -434,10 +448,10 @@ hr {
 }
 
 .registerbtn {
-  background-color: #04AA6D;
+  background-color: #5b69e9;
   color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
+  padding: 15px 20px;
+  margin-top: 1rem;
   border: none;
   cursor: pointer;
   width: 100%;
@@ -455,7 +469,7 @@ a {
 .signIn {
   background-color: #f1f1f1;
   text-align: center;
-  margin: 0 815px;
+  margin: 0rem 12rem 10rem;
   padding: 20px 0;
 }
 
