--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -97,12 +97,12 @@ nav a:hover::before {
 
 .footer-container{
 background-color: #ececec;
-padding-bottom: 0rem;
+padding-bottom: 2rem;
 }
 
 .footer{
     width: 100%;
-    height: 15vh;
+    height: 18vh;
     margin-bottom: 0;
     background-color: #ececec;
     color: #8c88e9;
@@ -110,7 +110,7 @@ padding-bottom: 0rem;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;
-    font-size: 1rem;
+    font-size: 19px;
 }
 
 .footer-heading{
