--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -1,433 +1,423 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* Stylesheet for Navigation bar */ 
+/* Stylesheet for Navigation bar */
 
-.navbar{
-    width: 80%;
-    margin: 0 auto; 
-    padding-bottom: 50px;
+.navbar {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
 
-header{
-    background-color: #ececec;
-    margin-left: 0%;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-color: rgb(255, 255, 255);    
-    padding-bottom: 20px;
-    padding-bottom: 20;
+header {
+  background-color: #ececec;
+  margin-left: 0%;
+  border-bottom-style: solid;
+  border-width: 3px;
+  border-color: rgb(255, 255, 255);
+  padding-bottom: 20px;
+  padding-bottom: 20;
 }
 
 .navLogo {
-    float: left;
-    margin-left: 1rem;
-    margin-top: 0.4rem;
-    width: 80px;
-    height: auto;
+  float: left;
+  margin-left: 1rem;
+  margin-top: 0.4rem;
+  width: 80px;
+  height: auto;
 }
 
 header::after {
-    content: '';
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 nav {
-    float: right;
+  float: right;
 }
 
-nav ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: "Lato", sans-serif;
 }
-nav ul img{
-    margin-top: 1rem;
-    margin-bottom: 0px;
-    border-radius: 80%;
-}
-
-nav li{
-    display: inline-block;
-    margin-left: 70px;
-    margin-right: 100px;
-    padding-top: 25px;
-    position: relative;
-    color:#7572c7;
+nav ul img {
+  margin-top: 1rem;
+  margin-bottom: 0px;
+  border-radius: 80%;
 }
 
-nav a{
-color: rgb(0, 0, 0);
-text-decoration: none;
-text-transform: uppercase;
-font-size: 20px;
-color: #7572c7;
-
+nav li {
+  display: inline-block;
+  margin-left: 70px;
+  margin-right: 100px;
+  padding-top: 25px;
+  position: relative;
+  color: #7572c7;
 }
 
-nav a:hover{
-    color:#7572c7;
-    font-weight: bold;
-   
+nav a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #7572c7;
 }
-nav a::before{
-    content: '';
-    display: block;
-    height: 3px;
-    background-color: #7572c7;
 
-    position: absolute;
-    top: 0; 
-    width: 0%;
+nav a:hover {
+  color: #7572c7;
+  font-weight: bold;
+}
+nav a::before {
+  content: "";
+  display: block;
+  height: 3px;
+  background-color: #7572c7;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
 }
 
 nav a:hover::before {
-    width: 100%;
-    transition: all ease-in-out 250ms;
+  width: 100%;
+  transition: all ease-in-out 250ms;
 }
 
 /* Stylesheet for footer*/
 
-
-.footer-container{
-background-color: #ececec;
-padding-bottom: 2rem;
-}
-
-.footer{
-    width: 100%;
-    height: 18vh;
-    margin-bottom: 0;
-    background-color: #ececec;
-    color: #8c88e9;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    font-size: 19px;
-}
-
-.footer-heading{
-    display: flex;
-    flex-direction: column;
-    margin-right: 4rem;
+.footer-container {
+  background-color: #ececec;
+  padding-bottom: 2rem;
+  font-family: "Lato", sans-serif;
+  border-top: 3px solid white;
 
 }
 
-.footer-heading h2{
-    margin-bottom: 2rem;
+.footer {
+  width: 100%;
+  height: 18vh;
+  margin-bottom: 0;
+  background-color: #ececec;
+  color: #8c88e9;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  font-size: 19px;
+}
+
+.footer-heading {
+  display: flex;
+  flex-direction: column;
+  margin-right: 4rem;
+}
+
+.footer-heading h2 {
+  margin-bottom: 2rem;
 }
 
 .footer-heading a {
-color: #8c88e9;
-text-decoration: none;
-margin-bottom: 0.5rem;
+  color: #8c88e9;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
 }
 
-.footer-heading a:hover{
-    color:#752bff;
-    transition: 0.3s ease-out;
+.footer-heading a:hover {
+  color: #752bff;
+  transition: 0.3s ease-out;
 }
 
-.footer-email-form h2{
-    margin-bottom: 2rem;
-
+.footer-email-form h2 {
+  margin-bottom: 2rem;
 }
 
-#footer-email{
-    width: 250px;
-    height: 40px;
-    border-radius: 8px;
-    outline: none;
-    padding-left: 0.5rem;
-    font-size: 1rem;
-    margin-bottom: 1rem;
+#footer-email {
+  width: 250px;
+  height: 40px;
+  border-radius: 8px;
+  outline: none;
+  padding-left: 0.5rem;
+  font-size: 1rem;
+  margin-bottom: 1rem;
 }
 
-#footer-email::placeholder{
-    color:#b1b1b1;
+#footer-email::placeholder {
+  color: #b1b1b1;
 }
 
-#footer-email-btn{
-    width: 100px;
-    height: 40px;
-    border-radius: 4px;
-    background-color:#6461c2;
-    outline: none;
-    border: none;
-    color: #ececec;
-    font-size: 1rem;
+#footer-email-btn {
+  width: 100px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #6461c2;
+  outline: none;
+  border: none;
+  color: #ececec;
+  font-size: 1rem;
 }
 
-#footer-email-btn:hover{
-    cursor: pointer;
-    background-color: #7975e7;
-    transition: all 0.4s ease-out;
+#footer-email-btn:hover {
+  cursor: pointer;
+  background-color: #7975e7;
+  transition: all 0.4s ease-out;
 }
 
+/* Stylesheet for Index */
 
-
-/* Stylesheet for Index */ 
-
-.first{
-font-family:'Josefin Sans', sans-serif;
-font-size: 60px;
-text-align: center;
-color: #7572c7;
-padding-top: 4em;
-text-transform: uppercase;
-background-color: #ececec
-;
+.first {
+  font-family: "Lato", sans-serif;
+  font-size: 60px;
+  text-align: center;
+  color: #7572c7;
+  padding-top: 4em;
+  text-transform: uppercase;
+  background-color: #ececec;
 }
 
-.second{
-padding: 30%;
-background-image: url(/Style/Droplet.jpg) ;
-
-background-size: 100%;
-
+.second {
+  padding: 30%;
+  background-image: url(/Style/Droplet.jpg);
+  background-size: 100%;
 }
 
-.second h2{
-    font-family:'Josefin Sans', sans-serif;
-    text-transform: uppercase;
-    font-size: 25px;
-    text-align: top;
-    color: #7572c7;
-
+.second h2 {
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  text-align: top;
+  color: #7572c7;
 }
 
-
-.second a{
-    font-size: 20px;
-    color: #7572c7;
-    font-style: normal;
-    text-decoration: none;
-    text-align:center
+.second a {
+  font-family: "Merriweather", serif;
+  font-size: 18px;
+  color: #7572c7;
+  font-style: normal;
+  text-decoration: none;
+  text-align: center;
 }
 
-.second a:hover{
-    color: #7572c7;
-    font-size: 21px;
-    cursor: pointer;
+.second a:hover {
+  color: #7572c7;
+  font-size: 21px;
+  cursor: pointer;
 }
 
 .third {
-    background-image: url(/Style/underwater2.png.jpg);
-    background-size: 100%;
-    padding-bottom: 10rem;
-    padding-top: 5rem;
-    text-align: center;
+  background-image: url(/Style/underwater2.png.jpg);
+  background-size: 100%;
+  padding-bottom: 10rem;
+  padding-top: 5rem;
+  text-align: center;
 }
 
-.third h2{
-    color: white;
-    font-size: 10em;
+.third h2 {
+  font-family: "Lato", sans-serif;
+  color: white;
+  font-size: 6em;
 }
 
-.third a{
-    color: white;
-    text-decoration: none;
-    font-size: 2em;
+.third a {
+  font-family: "Merriweather", serif;
+  color: white;
+  text-decoration: none;
+  font-size: 1.5em;
 }
 
-.third a:hover{
-    color: whitesmoke;
-    font-size: 2.1em;
-    cursor: pointer;
+.third a:hover {
+  color: whitesmoke;
+  font-size: 2.1em;
+  cursor: pointer;
 }
 
-.third video{
-    margin-top: 3rem;
-    border: none;
-    border-radius: 3rem;
+.third video {
+  margin-top: 3rem;
+  border: none;
+  border-radius: 3rem;
 }
 
 /* Stylesheet for AboutUS */
 
 .profilePicture {
-width: 200px;
-height: 250px;
-border-radius: 80px;
-margin: auto 10%; 
+  width: 200px;
+  height: 250px;
+  border-radius: 80px;
+  margin: auto 10%;
 }
 
-.imageContainer{
-    margin-top: 30px;
-    display: inline-block;
-    margin:1px;     
-    width:20%;     
-    text-align:left;     
-    border: 1px solid;     
-    display:inline-block;
-    padding: 5px;
-    border-color: white;
-    border-width: 2px;
-   
+.imageContainer {
+  margin-top: 30px;
+  display: inline-block;
+  margin: 1px;
+  width: 20%;
+  text-align: left;
+  border: 1px solid;
+  display: inline-block;
+  padding: 5px;
+  border-color: white;
+  border-width: 2px;
 }
 .imageContainer p {
-    font-size: 22px;
-    text-align: center;
-
+  font-size: 22px;
+  text-align: center;
 }
 
-#aboutText h1{
-    margin-top: 20px;
-    margin-bottom: 40px;
+#aboutText h1 {
+  font-family: "Lato", sans-serif;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
-#aboutText h3{
-    font-style: italic;
-}
-
-#aboutContainer{
-    color:#7572c7;
-    text-align: center;
-    width: 80%;
-    height: 300px;
-    padding-top: 20px;
-    }
-    
-    #aboutText
-    {
-        font-size: 40px;
-        text-align: left;
-        margin-left: 0px;
-        color: #7572c7;
-    }
-
-#employeesContainer{
-    margin-top: 60px;
-    height: 450px;
-    font-size: 30px;  
-    width:100%;
-    border: 5px solid white;
-    text-align: center;
-    color: #7572c7;
+#aboutText h3 {
+    font-family: "Lato", sans-serif;
 }
 
-
-#mainContainer{
-    background-color:#ececec ;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    height: 100%;
-    padding-bottom: 5%;
+#aboutContainer {
+  color: #7572c7;
+  text-align: center;
+  width: 80%;
+  height: 300px;
+  padding-top: 20px;
 }
 
-#myMenu{
-    display: block;
-    margin-right: 600px;
-    margin-bottom:0px;
-    margin-left: 2000px;
-    margin-top: 0px;
+#aboutText {
+  font-size: 40px;
+  text-align: left;
+  margin-left: 0px;
+  color: #7572c7;
 }
 
-#myWrapper{
-    border-radius: 50px;
+#employeesContainer {
+  margin-top: 60px;
+  height: 450px;
+  font-size: 30px;
+  width: 100%;
+  border: 5px solid white;
+  text-align: center;
+  color: #7572c7;
+  font-family: "Merriweather", serif;
 }
 
-#historyContainer{
-height: 200px;
-margin: 80px auto;
-margin-left: 0px;
-font-size: 25px;
-text-align: left;
-color: #7572c7;
+#mainContainer {
+  background-color: #ececec;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  height: 100%;
+  padding-bottom: 5%;
 }
-.historyContainerList{
-    list-style:none;
-    margin-top: 1em;
+
+#myMenu {
+  display: block;
+  margin-right: 600px;
+  margin-bottom: 0px;
+  margin-left: 2000px;
+  margin-top: 0px;
+}
+
+#myWrapper {
+  border-radius: 50px;
+}
+
+#historyContainer {
+  height: 200px;
+  margin: 80px auto;
+  margin-left: 0px;
+  font-size: 25px;
+  text-align: left;
+  color: #7572c7;
+  font-family: "Merriweather", serif;
+}
+.historyContainerList {
+  list-style: none;
+  margin-top: 1em;
+  font-family: "Merriweather", serif;
 }
 
 /* Stylesheet for products */
 
-#productSiteContainer{
-    background-color:#ececec;
-    padding: 15rem 5rem;
-    height: 100%;
-    color: #7572c7;
-
+#productSiteContainer {
+  background-color: #ececec;
+  padding: 15rem 5rem;
+  height: 100%;
+  color: #7572c7;
 }
 
-#productContainer{
-    margin: auto;
-    
+#productContainer {
+  margin: auto;
 }
 
-#productContainerText{
-    font-size: 20px;
-    
+#productContainerText {
+  font-size: 20px;
+  font-family: "Lato", sans-serif;
 }
 
-#ourProducts{
-    margin: 0px;
-    font-size: 20px;
-    text-align: left;
-    
+#ourProducts {
+  margin: 0px;
+  font-size: 20px;
+  text-align: left;
+  font-family: "Merriweather", serif;
 }
 
-
-.imageProductContainer{
-    width: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    text-align: left;
-    border-style:none;
-    border-width: 1px;
+.imageProductContainer {
+  width: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  text-align: left;
+  border-style: none;
+  border-width: 1px;
 }
 
-h5{
-    margin-top: 2rem;
-    font-size: 20px;
+h5 {
+  margin-top: 2rem;
+  font-size: 20px;
+  font-family: "Merriweather", serif;
 }
 
-.productOrderContainer{
-    border-top: black;
-    margin-top: 1rem;
-    margin-bottom: 4rem;
-    width: 8rem;
-    border-style: solid;
-    border-width: 3px;
-    background-color:#7572c7;
-    border-radius: 1rem;
+.productOrderContainer {
+  border-top: black;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+  width: 8rem;
+  border-style: solid;
+  border-width: 3px;
+  background-color: #7572c7;
+  border-radius: 1rem;
 }
 
-.imageProductContainer a{
-    display: block;
-    color: #ececec;
-    text-decoration: none;
-    text-align: center;
+.imageProductContainer a {
+  display: block;
+  color: #ececec;
+  text-decoration: none;
+  text-align: center;
 }
 
-.productOrderContainer:hover{
-    background-color: #6a26e7;
-    transition: 1s ease-in-out;
+.productOrderContainer:hover {
+  background-color: #6a26e7;
+  transition: 1s ease-in-out;
 }
 
-.pictureProduct{
-    width: 200px;
-    height: auto;
-    float: right;
-    margin-right:20rem;
+.pictureProduct {
+  width: 200px;
+  height: auto;
+  float: right;
+  margin-right: 20rem;
 }
 
-/* Stylesheet for profileRegister */ 
-
+/* Stylesheet for profileRegister */
 
 .container {
   padding: 32px;
   margin: 5rem 10rem 0.5rem;
-
+  font-family: "Lato", sans-serif;
 }
 
-
-input[type=text], input[type=password] {
+input[type="text"],
+input[type="password"] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 15px 0;
@@ -436,11 +426,11 @@ input[type=text], input[type=password] {
   background: #f1f1f1;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
   background-color: #ddd;
   outline: none;
 }
-
 
 hr {
   border: 1px solid #f1f1f1;
@@ -456,10 +446,11 @@ hr {
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
+  font-family: "Lato", sans-serif;
 }
 
 .registerbtn:hover {
-  opacity:1;
+  opacity: 1;
 }
 
 a {
@@ -471,60 +462,60 @@ a {
   text-align: center;
   margin: 0rem 12rem 10rem;
   padding: 20px 0;
+  font-family: "Lato", sans-serif;
 }
 
-/* Stylesheet for shopping cart */ 
+/* Stylesheet for shopping cart */
 
-.cartSiteContainer{
-    background-color: #ececec;
-    padding: 10rem 20rem 20rem;
-    text-align: center;
-    color: #7572c7;
-    font-size: 30px;
-
+.cartSiteContainer {
+  background-color: #ececec;
+  padding: 10rem 20rem 20rem;
+  text-align: center;
+  color: #7572c7;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
 }
 
-.cartProductContainer{
-    background-color: #ececec;
-    margin-right: 2rem;
-    display: inline-block;
-    padding: 2rem;
-    text-align: center;
-   
+.cartProductContainer {
+  background-color: #ececec;
+  margin-right: 2rem;
+  display: inline-block;
+  padding: 2rem;
+  text-align: center;
+  font-family: "Merriweather", serif;
 }
 
-.cartProductImage{
-    width: 10em;
-    height: auto;
-    margin: 2rem;
-
+.cartProductImage {
+  width: 10em;
+  height: auto;
+  margin: 2rem;
 }
 
-.cartSumContainer{
-    background-color: #ececec;
-    padding: 1rem 5rem 5rem;
-    margin-left: 3rem;
-    text-align: left;
-    font-size: 16px;
+.cartSumContainer {
+  background-color: #ececec;
+  padding: 1rem 5rem 5rem;
+  margin-left: 3rem;
+  text-align: left;
+  font-size: 16px;
+  font-family: "Merriweather", serif;
 }
 
-.cartSumContainer a{
-    padding: 1rem;
-    text-decoration: none;
-    display: block;
-    border-style: solid;
-    margin-top: 6rem;
-    background-color: #8c56f0;
-    color: #ececec;
-    font-size: 20px;
+.cartSumContainer a {
+  padding: 1rem;
+  text-decoration: none;
+  display: block;
+  border-style: solid;
+  margin-top: 6rem;
+  background-color: #8c56f0;
+  color: #ececec;
+  font-size: 20px;
 }
 
-.allroundContainer{
-    background-color: white;
-    padding: 2rem;
-    display: inline-flex;
-    margin-top: 4rem;
-    font-size: 16px;
-    color: black;
-
+.allroundContainer {
+  background-color: white;
+  padding: 2rem;
+  display: inline-flex;
+  margin-top: 4rem;
+  font-size: 16px;
+  color: black;
 }
