--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -172,18 +172,19 @@ nav a:hover::before {
 
 .first {
   font-family: "Lato", sans-serif;
-  font-size: 60px;
+  font-size: 40px;
   text-align: center;
   color: #7572c7;
-  padding-top: 4em;
+  padding-top: 2em;
+  padding-bottom: 25rem;
   text-transform: uppercase;
   background-color: #ececec;
 }
 
 .second {
-  padding: 30%;
-  background-image: url(/Style/Droplet.jpg);
-  background-size: 100%;
+    background-image: url(/Style/Droplet.jpg);
+    background-size: 100%;
+    padding: 30%;
 }
 
 .second h2 {
@@ -205,14 +206,14 @@ nav a:hover::before {
 
 .second a:hover {
   color: #7572c7;
-  font-size: 21px;
+  font-size: 19px;
   cursor: pointer;
 }
 
 .third {
   background-image: url(/Style/underwater2.png.jpg);
   background-size: 100%;
-  padding-bottom: 10rem;
+  padding-bottom: 8rem;
   padding-top: 5rem;
   text-align: center;
 }
@@ -220,19 +221,20 @@ nav a:hover::before {
 .third h2 {
   font-family: "Lato", sans-serif;
   color: white;
-  font-size: 6em;
+  font-size: 5em;
+  margin-bottom: 0rem;
 }
 
 .third a {
   font-family: "Merriweather", serif;
   color: white;
   text-decoration: none;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .third a:hover {
   color: whitesmoke;
-  font-size: 2.1em;
+  font-size: 1.3em;
   cursor: pointer;
 }
 
@@ -245,26 +247,25 @@ nav a:hover::before {
 /* Stylesheet for AboutUS */
 
 .profilePicture {
-  width: 200px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
   border-radius: 80px;
-  margin: auto 10%;
+  margin: auto 15%;
+  margin-bottom: 15px;
 }
 
 .imageContainer {
   margin-top: 30px;
   display: inline-block;
-  margin: 1px;
-  width: 20%;
+  margin: 5px;
+  width: 15%;
   text-align: left;
-  border: 1px solid;
   display: inline-block;
   padding: 5px;
-  border-color: white;
-  border-width: 2px;
+  margin-right: 60px;
 }
 .imageContainer p {
-  font-size: 22px;
+  font-size: 12px;
   text-align: center;
 }
 
@@ -290,12 +291,12 @@ nav a:hover::before {
   text-align: left;
   margin-left: 0px;
   color: #7572c7;
+
 }
 
 #employeesContainer {
   margin-top: 60px;
-  height: 450px;
-  font-size: 30px;
+  font-size: 25px;
   width: 100%;
   border: 5px solid white;
   text-align: center;
@@ -305,15 +306,15 @@ nav a:hover::before {
 
 #mainContainer {
   background-color: #ececec;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   height: 100%;
   padding-bottom: 5%;
 }
 
 #myMenu {
   display: block;
-  margin-right: 600px;
+  margin-right: 500px;
   margin-bottom: 0px;
   margin-left: 2000px;
   margin-top: 0px;
@@ -325,7 +326,7 @@ nav a:hover::before {
 
 #historyContainer {
   height: 200px;
-  margin: 80px auto;
+  margin-top: 200px;
   margin-left: 0px;
   font-size: 25px;
   text-align: left;
@@ -405,7 +406,7 @@ h5 {
   width: 200px;
   height: auto;
   float: right;
-  margin-right: 20rem;
+  margin-right: 15rem;
 }
 
 /* Stylesheet for profileRegister */
@@ -469,7 +470,7 @@ a {
 
 .cartSiteContainer {
   background-color: #ececec;
-  padding: 10rem 20rem 20rem;
+  padding: 10rem 10rem 20rem;
   text-align: center;
   color: #7572c7;
   font-size: 30px;
@@ -493,7 +494,7 @@ a {
 
 .cartSumContainer {
   background-color: #ececec;
-  padding: 1rem 5rem 5rem;
+  padding: 1rem 1rem 5rem;
   margin-left: 3rem;
   text-align: left;
   font-size: 16px;
