--- a/Style/stylesheet2.css
+++ b/Style/stylesheet2.css
@@ -9,6 +9,7 @@
 .flexContainer-nav {
   width: 100%;
   height: 100px;
+  
 }
 
 .navBar {
@@ -16,7 +17,10 @@
   justify-content: space-between;
   flex-direction: row;
   height: 10vh;
-  margin-bottom: 1rem;
+  background-color: #ececec;
+  border-bottom-style: solid;
+  border-width: 3px;
+  border-color: rgb(255, 255, 255);
 }
 
 .navLink {
@@ -43,20 +47,40 @@ nav a {
   color: #7572c7;
 }
 
+nav a:hover {
+  color: #7572c7;
+  font-weight: bold;
+}
+nav a::before {
+  content: "";
+  height: 3px;
+  background-color: #7572c7;
+  position:absolute;
+  top: 0;
+  width: 0%;
+}
+
+nav a:hover::before {
+  width: 5%;
+  transition: all ease-in-out 350ms;
+}
+
 /* Stylesheet for footer */
 
 .footer-container {
   display: flex;
   justify-content: center;
-  background-color: white;
-  color: lightblue;
+  color: #8c88e9;
   height: 15vh;
+  background-color: #ececec;
+
 }
 
 .flexFooterColumns {
   border: 2px red solid;
   display: flex;
   flex-direction: column;
+
 }
 
 .footerColumn {
@@ -69,10 +93,10 @@ nav a {
 /*Stylesheet for first section in Index*/
 
 .first {
-  margin-top: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #ececec;
 }
 
 .forsideLogo {
@@ -229,7 +253,7 @@ nav a {
   height: auto;
 }
 
-/*Stylesheet for Profile*/
+/*Stylesheet for Profile and login*/
 
 .container {
   margin: 5rem 15rem 0.5rem;
