--- a/Style/stylesheet2.css
+++ b/Style/stylesheet2.css
@@ -19,8 +19,9 @@
   height: 10vh;
   background-color: #ececec;
   border-bottom-style: solid;
-  border-width: 3px;
+  border-width: 2px;
   border-color: rgb(255, 255, 255);
+  font-family: "Lato", sans-serif;
 }
 
 .navLink {
@@ -34,7 +35,7 @@
 }
 
 .navLogo {
-  width: 80px;
+  width: 125px;
   height: auto;
   align-self: center;
 }
@@ -73,11 +74,10 @@ nav a:hover::before {
   color: #8c88e9;
   height: 15vh;
   background-color: #ececec;
-
+  border-top: 3px solid white;
 }
 
 .flexFooterColumns {
-  border: 2px red solid;
   display: flex;
   flex-direction: column;
 
@@ -88,6 +88,17 @@ nav a:hover::before {
   margin: auto 2em;
 }
 
+.footer-container a{
+  color: #7572c7;
+  text-decoration: none;
+}
+
+#copyright{
+  text-align: center;
+  background-color: #ececec;
+}
+
+
 /* Stylesheet for Index */
 
 /*Stylesheet for first section in Index*/
@@ -97,12 +108,18 @@ nav a:hover::before {
   flex-direction: column;
   align-items: center;
   background-color: #ececec;
+  text-transform: uppercase;
+  font-size: 35px;
+  flex-wrap: wrap;
+  color: #8c88e9;
+  font-family: "Lato", sans-serif;
+  
 }
 
 .forsideLogo {
-  flex: 1 1 1000%;
+  flex: 1 1 100%;
   min-width: 0;
-  width: 25vw;
+  width: 35vw;
   margin-top: 10%;
 }
 
@@ -116,6 +133,7 @@ nav a:hover::before {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   position: relative;
+  color:#7572c7;
 }
 
 .secondText {
@@ -123,8 +141,23 @@ nav a:hover::before {
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 3px solid green;
   font-size: 1em;
+  color: #7572c7;
+  font-family: "Lato", sans-serif;
+}
+
+.secondText a {
+  font-family: "Merriweather", serif;
+  font-size: 18px;
+  color: #7572c7;
+  font-style: normal;
+  text-decoration: none;
+  text-align: center;
+}
+
+.secondText a:hover {
+  color: rgb(124, 120, 202);
+  cursor: pointer;
 }
 
 /*Stylesheet for third section in Index*/
@@ -175,49 +208,64 @@ nav a:hover::before {
 #mainContainer {
   display: flex;
   flex-direction: column;
-  height: 75vh;
+  height: 100vh;
+  background-color: #ececec;
+  color: #7572c7;
 }
 
 #aboutText {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 150px;
+  flex: 0.5;
+  align-content: space-between;
+  font-size: 15px;
 }
 #historyContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
+ display: flex;
+ flex-direction: row; 
+  
 }
-.historyContainerList {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.historyContainerList img {
+  width: 100px;
+  height: 50px;
+  
+ 
 }
 .historyContainerList li {
-  margin: 1em 3em;
-  border-color: lawngreen;
+  background-color: #7572c7;
+  padding: 1.5px;
+  color: #ececec;
   border-width: 5px;
   border-style: solid;
   list-style-type: none;
+  font-size: 25px;
+  
+}
+
+.symbols{
+  width: 100px;
+  height: 50px;
+
 }
 
 #employeesContainer {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
+  align-items:flex-start ;
   justify-content: center;
+  flex: 0.25;
+  flex-wrap: wrap;
 }
 .imageContainer {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 0 3em;
+
+  margin: 0 1em;
   border-style: solid;
   border-color: black;
-  border-width: 1px;
+  border-width: 0.5px;
 }
 .profilePicture {
   width: 150px;
