--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -9,7 +9,6 @@
 .flexContainer-nav {
   width: 100%;
   height: 100px;
-  
 }
 
 .navBar {
@@ -56,7 +55,7 @@ nav a::before {
   content: "";
   height: 3px;
   background-color: #7572c7;
-  position:absolute;
+  position: absolute;
   top: 0;
   width: 0%;
 }
@@ -75,12 +74,13 @@ nav a:hover::before {
   height: 15vh;
   background-color: #ececec;
   border-top: 3px solid white;
+  flex-wrap: wrap;
 }
 
 .flexFooterColumns {
   display: flex;
   flex-direction: column;
-
+  
 }
 
 .footerColumn {
@@ -88,16 +88,15 @@ nav a:hover::before {
   margin: auto 2em;
 }
 
-.footer-container a{
+.footer-container a {
   color: #7572c7;
   text-decoration: none;
 }
 
-#copyright{
+#copyright {
   text-align: center;
   background-color: #ececec;
 }
-
 
 /* Stylesheet for Index */
 
@@ -113,7 +112,6 @@ nav a:hover::before {
   flex-wrap: wrap;
   color: #8c88e9;
   font-family: "Lato", sans-serif;
-  
 }
 
 .forsideLogo {
@@ -133,7 +131,7 @@ nav a:hover::before {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   position: relative;
-  color:#7572c7;
+  color: #7572c7;
 }
 
 .secondText {
@@ -170,30 +168,41 @@ nav a:hover::before {
 }
 
 .third h2 {
-  padding-top: 20%;
+  padding-top: 10%;
   font-family: "Lato", sans-serif;
-  color: white;
+  color: #ececec;
   font-size: 3em;
   margin-bottom: 0rem;
 }
 
 .third a {
   font-family: "Merriweather", serif;
-  color: white;
+  color: #ececec;
   text-decoration: none;
   font-size: 1em;
 }
 
+.third p {
+  padding-top: 3%;
+  font-family: "Merriweather", serif;
+  color: #ececec;
+  font-size: 1em;
+  text-align: center;
+}
+.third p:nth-of-type(2) {
+  padding-top: 0%;
+}
+
 .third a:hover {
-  color: whitesmoke;
+  color: #ffffff;
   cursor: pointer;
 }
 
 .third video {
-  margin-top: 3rem;
+  margin-top: 2rem;
   border: none;
   border-radius: 4rem;
-  margin-bottom: 4rem;
+  padding-bottom: 0rem;
 }
 
 @media screen and (max-width: 970px) {
@@ -222,15 +231,12 @@ nav a:hover::before {
   font-size: 15px;
 }
 #historyContainer {
- display: flex;
- flex-direction: row; 
-  
+  display: flex;
+  flex-direction: row;
 }
 .historyContainerList img {
   width: 100px;
   height: 50px;
-  
- 
 }
 .historyContainerList li {
   background-color: #7572c7;
@@ -240,19 +246,17 @@ nav a:hover::before {
   border-style: solid;
   list-style-type: none;
   font-size: 25px;
-  
 }
 
-.symbols{
+.symbols {
   width: 100px;
   height: 50px;
-
 }
 
 #employeesContainer {
   display: flex;
   flex-direction: row;
-  align-items:flex-start ;
+  align-items: flex-start;
   justify-content: center;
   flex: 0.25;
   flex-wrap: wrap;
@@ -275,31 +279,59 @@ nav a:hover::before {
 
 /*Stylesheet for Products*/
 
-#productSiteContainer {
+.productPageFlex{
   display: flex;
-  flex-direction: column;
-  margin: 0 10em;
-  height: 90vh;
-}
-
-.imageProductContainer {
-  display: flex;
-  flex-direction: row-reverse;
-  max-width: 1000px;
-  margin: 3em 0;
-  justify-content: flex-end;
-}
-
-#imageProductText {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.pictureProduct {
-  width: 200px;
   height: auto;
+  background-color: #ececec;
+  flex-direction: column;
+  flex: 1 100%;
+  column-gap: 20%;
 }
+
+.productAdjustTemp{
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  flex: 3.5;
+  color:#7572c7;
+  font-family: "Merriweather", serif;
+}
+
+.productAdjustTemp h2{
+  font-size: 3em;
+  font-family:"Lato", sans-serif;
+}
+
+.adjustTempPrice{
+display: flex;
+flex-direction: column;
+align-items: center;
+
+
+}
+.adjustTempPrice a{
+  text-decoration: none;
+  background-color: #7572c7;
+  width: fit-content;
+  text-align: center;
+  color: #ececec;
+  padding: 0.4em;
+  border-style: solid;
+  border-color: white;
+  border-width: 0.5px;
+  border-radius: 10%;
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+}
+
+
+
+
+
+
+
+
+
 
 /*Stylesheet for Profile and login*/
 
@@ -402,6 +434,6 @@ a {
   width: 6rem;
 }
 
-#registerSite{
+#registerSite {
   height: 70vh;
 }
